--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                             <!-- for a smooth transistion animation, repeat your first item below-->
                             <div class="element">Athlete</div>
-                            <div class="element">Gamer</div>
+                            <div class="element">Student</div>
                             <div class="element">Gamer</div>
                             <!-- Replace the items above with your own -->
 
