--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
 
                             <!-- for a smooth transistion animation, repeat your first item below-->
                             <div class="element">Athlete</div>
-                            <div class="element">Student</div>
-                            <div class="element">Gamer</div>
                             <!-- Replace the items above with your own -->
 
                         </div>
@@ -113,8 +111,8 @@
 				<span class="parameter">countries <br> Visited</span>
 			</div>
             <div class="box">
-				<span class="value"></span>2
-				<span class="parameter"> <br>Souls games</span>completed
+				<span class="value"></span>4
+				<span class="parameter">Souls Games<br>Completed</span>
 			</div>
             <!-- Modify the items above make them your own, edit the numbers or text between the > and < symbols -->
 
